[package]
name = "quiz-game-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
crossbeam-queue = "0.3.8"
tokio = {version = "1.26.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
futures-util = "0.3.26"
futures-channel = "0.3.26"
tungstenite = "0.18.0"
uuid = { version = "1.3.0", features = ["v4"] }
jsonwebtoken = "8.2.0"
log4rs = "1.2.0"
chrono = "0.4.24"
